# arxiv-discord

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cron.yml
src/: main.py  settings.py
