[tool.poetry]
name = "arxiv-discord"
version = "0.1.0"
description = ""
authors = ["satoooh <bighope.lumiere0916@gmail.com>"]
license = ""
readme = "README.md"
packages = [{include = "arxiv_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^1.4.3"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
